# aku

./: .gitignore  README.md  aku.cabal  cabal.config  stack.yaml
.idea.bak/: compiler.xml  misc.xml  modules.xml  workspace.xml
aku/: LICENSE  README.md  aku.cabal
aku-assembler/: README.md  aku-assembler.cabal
aku-assembler/src/: Assembler.hs  Parser.hs
aku-assembler/test/: program.asm
aku-benchmarks/: README.md  aku-benchmarks.cabal
aku-benchmarks/app/: Main.hs
aku-benchmarks/programs/: bubble_sort.asm  throughput.asm  two_matrix_multiply.asm  vector_dot_product.asm
aku-benchmarks/src/: Benchmarks.hs
aku-debugger/: README.md  aku-debugger.cabal
aku-debugger/app/: Main.hs
aku-debugger/src/: Command.hs  Debugger.hs
aku-tests/: README.md  aku-tests.cabal
aku-tests/programs/: bubble_sort.asm  infinite_loop.asm  simple_loop.asm  skip_instruction.asm  store_then_load.asm
aku-tests/test/: SimplePrograms.hs  Spec.hs
aku/src/: CPU.hs  ExecutionUnit.hs  Function.hs  Instruction.hs  Memory.hs  RegisterStatusTable.hs  Registers.hs  ReservationStation.hs  Stats.hs  Utils.hs
aku/test/: Forwarding.hs  SimplePrograms.hs  SingleInstruction.hs  Spec.hs
app/: Main.hs
src/: CPU.hs  Instruction.hs  Lib.hs  Memory.hs  Registers.hs  Utils.hs
test/: Forwarding.hs  SimplePrograms.hs  SingleInstruction.hs  Spec.hs
