name:                aku-assembler
version:             0.1.0.0
synopsis:            An assembler for the aku CPU
-- description:
homepage:            https://github.com/rossng/aku#readme
license:             BSD3
license-file:        LICENSE
author:              Ross Gardiner
maintainer:          ross-public@gmx.com
copyright:           MIT
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Assembler
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , megaparsec
                     , aku
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rossng/aku
