name:                aku-tests
version:             0.1.0.0
synopsis:            Integration tests for the aku CPU simulator
-- description:
homepage:            https://github.com/rossng/aku#readme
license:             BSD3
license-file:        LICENSE
author:              Ross Gardiner
maintainer:          ross-public@gmx.com
copyright:           MIT
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

test-suite aku-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       SimplePrograms
  main-is:             Spec.hs
  build-depends:       base
                     , aku
                     , aku-assembler
                     , HUnit
                     , lens
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rossng/aku
