name:                aku
version:             0.1.0.0
synopsis:            A simple pipelined CPU simulator
-- description:
homepage:            https://github.com/rossng/aku#readme
license:             BSD3
license-file:        LICENSE
author:              Ross Gardiner
maintainer:          ross-public@gmx.com
copyright:           MIT
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Registers
                     , Instruction
                     , Memory
                     , Stats
                     , CPU
                     , Utils
                     , ReservationStation
                     , RegisterStatusTable
                     , ExecutionUnit
                     , Function
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , lens
                     , mtl
                     , monad-loops
                     , vector-split
                     , containers
  default-language:    Haskell2010

executable aku
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aku
                     , lens
                     , mtl
  default-language:    Haskell2010

test-suite aku-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Forwarding
                     , SingleInstruction
  main-is:             Spec.hs
  build-depends:       base
                     , aku
                     , HUnit
                     , lens
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rossng/aku
